# Pool_proyect

./: CMakeLists.txt  Error_Handlers.cpp  Functors.cpp  Stack.cpp  Stack.h  library.h  package.json
Concurent_task/: Some_examples.cpp
Containers/: Algo.cpp  Deque.cpp  Deque.h  Deque_high_level.cpp  Deque_high_level.h  Example_node.cpp  Iterator.cpp  Iterator.h  Lines_Document.cpp  List.cpp  List.h  ListIter.cpp  ListIter.h  List_iter.cpp  List_iter.h  Matrix_as.cpp  Matrix_as.h  New_Algos.cpp  New_containers_imple.cpp  Node_list.cpp  Node_list.h  Quant_finance.cpp  Queue.cpp  Queue.h  Queue_low_level.cpp  Queue_low_level.h  Some_example_of_comparable.cpp  Text_Iterator.cpp  Text_Iterator.h
Debugging/: Nodes_ test.cpp  main.cpp  main_ 2.cpp
Examples_with_sets/: set_as_example.cpp
Hackr_probls/: pr_products.cpp
IOS_examples/: As_digit.cpp  e1.cpp
Implement_Smart_ptrs/: Control.cpp  Control.h  Testing_the_first.cpp  testin_with_shared.cpp
MonteCarlo_Simulations/: Pi_MC_simulation.cpp
Moves_containers/: Array.cpp  Array.h  Vector.cpp  Vector.h  Vector_abstract.cpp  Vector_abstract.h
Neuron_layer/: Layer_neuron.cpp  Layer_neuron.h  Neuron.cpp  Neuron.h  Some_neuron.cpp
Pool_Abstract_Layer/: Abstract_pool.cpp  Abstract_pool.h  Resource_abstract.cpp  Resource_abstract.h  tester.cpp
Pool_layer/: ObjectPool.cpp  ObjectPool.h  Resource.cpp  Resource.h  test.cpp
Proxies/: Proxies.cpp  Proxies.h
Templates/: Rectangle_exa.cpp  Rectangle_exa.h  Shape_exa.cpp  Shape_exa.h  Testing_examples.cpp
functional_programm/: Maybe.cpp  Maybe.h  Maybe_example.cpp
(+66 files in other folders)
